postgresql-common (158) UNRELEASED; urgency=medium

  * Put stats_temp_directory aka pg_stat_tmp into /var/run/postgresql by
    default. (Closes: #739276)

 -- Christoph Berg <myon@debian.org>  Tue, 03 Jun 2014 21:30:05 +0200

postgresql-common (157) unstable; urgency=medium

  * Remove createcluster.conf on purge.
  * Fix testsuite -i to install packages before invoking unshare so apt still
    has network access.

 -- Christoph Berg <myon@debian.org>  Fri, 30 May 2014 21:31:36 +0200

postgresql-common (156) unstable; urgency=medium

  [ Christoph Berg ]
  * pg_upgradecluster: Add missing psql -p argument when determining the
    number of tablespaces in the old cluster.
  * Link pg_archivecleanup from /usr/bin. (Closes: #740593)
  * pg_virtualenv: Use fsync = off for speed.
  * pg_buildext: Pass -cios options to pg_virtualenv.
  * t/140_pg_config.t: Versions >= 9.3 have multiarch-enabled libpq et al.
  * Bump to dh 9.

  [ Martin Pitt ]
  * Fix typo in German debconf translations. Thanks Rhonda for pointing out!

 -- Christoph Berg <myon@debian.org>  Fri, 30 May 2014 00:00:44 +0200

postgresql-common (155) unstable; urgency=medium

  [ Christoph Berg ]
  * postgresql-common: Maintain createcluster.conf using ucf, and add a
    debconf question about the default use of ssl (default true, priority
    medium). (Closes: #743918)
  * Use "mount --make-rprivate /" inside our "unshare -m" calls.
    (See #739593.)
  * pg_ctlcluster: Add status action, add --foreground option, accept dash
    (and slash) between version and cluster.
  * Add systemd unit files as examples (testers welcome!).
  * postgresql-client: Wrap pg_recvlogical, introduced in 9.4.
  * t/050_encodings.t: 9.4 emits COPY command tags, suppress with psql -q.
  * postgresql: Add Suggests: postgresql-doc. (Closes: #743755)
  * pg_conftool: New script to read and edit PostgreSQL configuration files,
    based on the existing read/edit functions in PgCommon.pm.